--- a/src/layouts/demo/BaseDemoLayout.astro
+++ b/src/layouts/demo/BaseDemoLayout.astro
@@ -31,7 +31,7 @@ const {dateAdded = "", title = "", topics = [], sections = []} = Astro.props as 
             <div class="text-sm mx-auto text-center" id="meta">
                 <p>Date Added - {dateAdded}</p>
                 <p>
-                    <b>Tobpics</b> - 
+                    <b>Topics</b> - 
                     {
                         topics.join(', ')
                     }
