--- a/src/pages/demos/index.astro
+++ b/src/pages/demos/index.astro
@@ -5,9 +5,10 @@ import Image from "astro/components/Image.astro";
 
 const Pages: {href: string, title: string, description: string, imageUrl: ImageMetadata, createdAt: Date, updatedAt?: Date}[] = [
 	{ href: "/demos/FabricSvg", title: "Fabric SVG Filter Demo", description: "A demo of applying a fabric texture to SVG elements using filters.", imageUrl: FabricSvgImage, createdAt: new Date("07/15/2025") },
-	{ href: "/demos/RainfallCanvas", title: "RainfallCanvas", description: "Making Canvases for rainy days", imageUrl: FabricSvgImage, createdAt: new Date("07/18/2025") },
+	{ href: "/demos/RainfallCanvas", title: "Rainfall Canvas", description: "Making Canvases for rainy days", imageUrl: FabricSvgImage, createdAt: new Date("07/18/2025") },
 	{ href: "/demos/QuickGSAPUtils", title: "Quick Gsap Grab bag", description: "small preset code functions for basic animations", imageUrl: FabricSvgImage, createdAt: new Date("07/22/2025") },
 	{ href: "/demos/3dcss", title: "3d Effect in CSS", description: "How can css transforms move your elements into the 3rd dimension", imageUrl: FabricSvgImage, createdAt: new Date("08/02/2025") },
+	{ href: "/demos/SnowfallCanvas", title: "Snowfall Canvas", description: "How can css transforms move your elements into the 3rd dimension", imageUrl: FabricSvgImage, createdAt: new Date("08/02/2025") },
 	
 ]
 ---
