--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ let isMenuOpen = true;
 		</div>
 		<div id="menu" class="bg-[rgba(250, 250, 250, 0.5)] absolute w-full h-full flex flex-col items-center justify-center gap-4 z-10">
 			
-					<a href="/demos" class="p-3 border-border border bg-muted rounded-full hover:scale-105 transition-all">
+					<a href="/demos" class="surface p-3 border-border border bg-muted rounded-full hover:scale-105 transition-all">
 						<h1 id="demoTitle" class="text-4xl font-bold bg-gradient-to-r from-pink-500 via-purple-500 to-blue-500 bg-clip-text text-transparent animate-gradient-move hover:animate-pulse">
 							Cool Demos
 						</h1>
