starting float page

--- a/src/pages/demos/QuickGSAPUtils.astro
+++ b/src/pages/demos/QuickGSAPUtils.astro
@@ -8,9 +8,9 @@ import DemoSubsection from "../../layouts/demo/DemoSubsection.astro";
 import BasicButton from "../../components/Astro/Buttons/BasicButton.astro";
 
 const base: BaseDemoLayoutProps = {
-		dateAdded: "07/15/2025",
-		title: "Fabric SVG Filter Demo",
-		topics: ["SVG", "Filters", "Displacement"],
+		dateAdded: "07/25/2025",
+		title: "Quick GSAP Utils",
+		topics: ["GSAP", 'animation'],
 		sections: [
 			{ id: "intro", title: "Introduction" },
 			{ id: "carousel", title: "Carousel" },
