Adding soundboard starting 3d article (#3)
* add menu listener

* add more react handling, soundboard and 3d css article start

* more soundboard handling with controls

* more soundboard additions

* more gsap screamble util and some formatting

* adding snow fall canvas page

* starting float page

* adding pixel art

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
-import NavBar from "../components/NavBar.astro"
+import NavBar from "../components/Astro/NavBar.astro"
+import HeapSnapshot from "../components/Astro/HeapSnapshot.astro";
 
 const {hasNavbar} = Astro.props
 ---
@@ -18,16 +19,18 @@ const {hasNavbar} = Astro.props
 	}
 
 	document.documentElement.classList.add('scroll-smooth');
+	document.documentElement.classList.add('[scroll-padding-top:64px]');
+	
   }
   applyTheme();
   window.addEventListener('astro:after-swap', applyTheme);
 })();
 </script>
-<html lang="en" class=`bg-background scroll-smooth ${hasNavbar ? "[scroll-padding-top:56px]" : ""}`>
+<html lang="en" class={`bg-background scroll-smooth`}>
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Iceberg&family=Michroma&family=Uncial+Antiqua&display=swap" rel="stylesheet">
@@ -35,9 +38,11 @@ const {hasNavbar} = Astro.props
 		<meta name="generator" content={Astro.generator} />
 		<title>Garden</title>
 	</head>
-	<body class="text-foreground bg-background">
+	<body class={`text-foreground bg-background`}>
 		{hasNavbar && <NavBar />}
-		<div id="pageContent" class={`${hasNavbar ? "mt-[48px]" : ""} transition-all duration-200`}><slot /></div>
+		<div id="pageContent" class={`${hasNavbar ? "mt-[48px]" : ""} transition-all duration-200`}>
+			<slot />
+		</div>
 	</body>
 </html>
 
