--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import PageSection from "../layouts/PageSection.astro"
-import MainBackdrop from "../components/MainBackdrop/index.astro"
+import MainBackdrop from "../components/Astro/MainBackdrop/index.astro"
 
 let isMenuOpen = true;
 ---
@@ -11,35 +11,21 @@ let isMenuOpen = true;
 		<div class="absolute top-0 left-0 w-dvw h-dvh z-0">
 			<MainBackdrop />
 		</div>
-		<div id="menu" class="bg-[rgba(250, 250, 250, 0.5)] absolute w-full h-full flex items-center justify-evenly gap-4 z-10">
-			<div data-display="baseDisplay" class="bg-[#fafafa40] container relative rounded-lg border-border border-1 border-solid p-6 lg:p-10">
-				<button id="hideMenu" class="cursor-pointer">Welcome! (click here to hide menu)</button>
-
-				<div id="demos" class="w-full border-y p-2">
-					<a href="/demos">
-						<h1 id="demoTitle" class="py-2 text-4xl font-bold bg-gradient-to-r from-pink-500 via-purple-500 to-blue-500 bg-clip-text text-transparent animate-gradient-move">
+		<div id="menu" class="bg-[rgba(250, 250, 250, 0.5)] absolute w-full h-full flex flex-col items-center justify-center gap-4 z-10">
+			
+					<a href="/demos" class="surface p-3 border-border border bg-muted rounded-full hover:scale-105 transition-all">
+						<h1 id="demoTitle" class="text-4xl font-bold bg-gradient-to-r from-pink-500 via-purple-500 to-blue-500 bg-clip-text text-transparent animate-gradient-move hover:animate-pulse">
 							Cool Demos
 						</h1>
 					</a>
-					<div id="demoRow" class="w-full">
-						<div id="demo-card" class="hover:underline size-40 rounded flex flex-col items-center justify-center border-accent border p-1">
-							Some content make this a carousel with recent 10 
-						</div>
-					</div>
-				</div>
-				
-				<div id="projects" class="w-full border-y p-2">
-					<a href="/projects">
-						<h1 id="projectsTitle" class="py-2 scramble text-4xl font-bold bg-gradient-to-r from-pink-500 via-purple-500 to-red-500 bg-clip-text text-transparent animate-gradient-move hover:from-pink-500 hover:via-purple-500 hover:to-blue-500 cursor-pointer">
+
+					<a href="/projects" class="p-3 border-border border bg-muted rounded-full hover:scale-105 transition-all">
+						<h1 id="projectsTitle" class="text-4xl font-bold bg-gradient-to-r from-pink-500 via-purple-500 to-red-500 bg-clip-text text-transparent animate-gradient-move hover:from-pink-500 hover:via-purple-500 hover:to-blue-500 cursor-pointer hover:animate-pulse">
 							Projects
 						</h1>
 					</a>
-					<div id="projectsRow" class="w-full">
-						<div id="projectCard-card" class="size-40 rounded flex flex-col items-center justify-center border-accent border p-1">
-							Some content make this a carousel with recent 10 
-						</div>
-					</div>
-				</div>
+					
+				
 			</div>
 		</div>
 	</PageSection>
@@ -87,7 +73,6 @@ let isMenuOpen = true;
 	if (hideMenuButton && menu) {
 		hideMenuButton.addEventListener('click', (e) => {
 			e.stopPropagation(); // prevent bubbling if needed
-			console.log("CLICKED");
 			menu.classList.add("hidden");
 		});
 
