--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,26 +1,62 @@
 @import "tailwindcss";
 
 @utility no-scrollbars {
-      scrollbar-width: none;
-      -ms-overflow-style: none; /* For Internet Explorer and Edge */
-    }
+  scrollbar-width: none;
+  -ms-overflow-style: none; /* For Internet Explorer and Edge */
+}
 
 @utility animate-gradient-move {
   background-size: 200% 200%;
   animation: gradientShift 4s ease infinite;
 }
 
- @keyframes gradientShift {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
+@keyframes gradientShift {
+  0% {
+    background-position: 0% 50%;
   }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@utility animate-pop-in {
+  animation: pop-in 0.5s ease;
+}
+
+@keyframes pop-in {
+  0% {
+    scale: 0;
+  }
+  60% {
+    scale: 1.1;
+  }
+  100% {
+    scale: 1;
+  }
+}
+
+@utility animate-slide-in {
+  animation: slide-in 0.2s ease;
+}
+
+@keyframes slide-in {
+  0% {
+    transform: translateY(-8px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
+@utility preserve-3d{
+  transform-style: preserve-3d;
+}
+
 
 @theme {
   --color-background: #f3f4f6; /* neutral light gray */
