--- a/src/pages/projects/gradientbuilder.astro
+++ b/src/pages/projects/gradientbuilder.astro
@@ -1,12 +1,12 @@
 ---
 
 import Layout from "../../layouts/Layout.astro";
-import { ImageFilterinator } from "../../projects/Solid/ImageFilterinator/index.solid";
+import GradientBuilder from "../../projects/React/gradientBuilder";
 ---
 
 <Layout hasNavbar>
     <div class="m-auto w-11/12 h-screen">
-        <ImageFilterinator
+        <GradientBuilder
             client:load
         />
     </div>
