--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -6,4 +6,5 @@ import Layout from "../../layouts/Layout.astro";
 <Layout hasNavbar>
     <a href="/projects/pixelator">pixelator</a>
     <a href="/projects/soundboard">soundboard</a>
+    <a href="/projects/gradientbuilder">gradient</a>
 </Layout>
