--- a/src/components/Astro/canvases/GardenBackdrop.astro
+++ b/src/components/Astro/canvases/GardenBackdrop.astro
@@ -1,17 +1,15 @@
 
 ---
-import MainBackgroundFull from "../../assets/mainBackgroundFull.jpeg";
 ---
 <canvas id="garden-canvas" class="w-dvw h-dvh "/>
 <script>
 import {Plant} from "../canvases/classes/Plant.ts"
 import {ImageLayer} from "../canvases/classes/ImageLayer.ts"
-import MainBackgroundFull from "../../../assets/mainBackgroundFull.jpeg";
 
-import foreground from "../../../assets/mainlayers/foreground v1.png";
-import tree from "../../../assets/mainlayers/midground checkpoint v2.png"
-import castle from "../../../assets/mainlayers/castlle v1.png";
-import background from "../../../assets/mainlayers/foregrounderase.png";
+import foreground from "../../../assets/mainlayers/foreground.png";
+import tree from "../../../assets/mainlayers/midground.png"
+import castle from "../../../assets/mainlayers/castle.png";
+import background from "../../../assets/mainlayers/background.png";
 
 
     const canvas = document.getElementById("garden-canvas") as HTMLCanvasElement
