--- a/src/pages/demos/QuickGSAPUtils.astro
+++ b/src/pages/demos/QuickGSAPUtils.astro
@@ -371,5 +371,8 @@ decipher.addEventListener("click", () => {
 
 			</script>
 		</DemoSubsection>
+		<DemoSubsection id="column-carousel" title="Column Carousel">
+			
+		</DemoSubsection>
     </BaseDemoLayout>
 </Layout>
